Add search parameter to job resource names endpoint
