# API/openapi_bacularis.json
@@ -12,7 +12,7 @@
 			"name": "AGPLv3",
 			"url": "https://www.gnu.org/licenses/agpl-3.0-standalone.html"
 		},
-		"version": "3.0.6"
+		"version": "3.0.7"
 	},
 	"servers": [
 		{
@@ -1104,6 +1104,16 @@
 				"schema": {
 					"type": "string",
 					"enum": ["B", "M", "V", "R", "U", "I", "D", "A", "C", "c", "g", "S"]
+				}
+			},
+			"Search": {
+				"name": "search",
+				"in": "query",
+				"description": "Search by name or name part",
+				"required": false,
+				"schema": {
+					"type": "string",
+					"pattern": "[a-zA-Z0-9:.-_ ]+"
 				}
 			}
 		}
@@ -2372,6 +2382,9 @@
 					},
 					{
 						"$ref": "#/components/parameters/JobType"
+					},
+					{
+						"$ref": "#/components/parameters/Search"
 					}
 				]
 			}
